2008-06-17  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs,
	  MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Maintain more
	  completion window state after a parser DB update. Fixes "Bug 400228
	  - C# parsing frequently interrupts code completion".

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Dialogs/MultiConfigItemOptionsPanel.cs:
	  Disable option panels which require a configuration when no
	  configurations are available.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.StartupOptionsPanelWidget.cs:
	  Updated.
	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CustomCommandWidget.cs:
	  Support new variables in custom command options.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/gui.stetic: Cosmetic fix.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.mdp: Minor project file fixes.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml: Bump MD version.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml, MonoDevelop.Projects.Gui.mdp,
	  gtk-gui/gui.stetic, Makefile.am,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/StartupOptionsPanel.cs:
	  Implemented new options panel for setting the solution startup
	  options.
	* gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.GeneralProjectOptionsWidget.cs,
	  gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.CombineInformationWidget.cs,
	  gtk-gui/objects.xml,
	  gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.StartupOptionsPanelWidget.cs:
	  Updated.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml: Reorganize the main settings
	  section.
	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/BaseDirectoryPanel.cs:
	  Cosmetic fix.
